Refactor form html

--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
   </head>
   <body>
     <header>
-      <h3 id="title">What's for Dinner?</h3>
-      <button id="add-a-recipe">ADD A RECIPE</button>
+      <h3 class="title">What's for Dinner?</h3>
+      <button class="add-a-recipe-button">Add a recipe</button>
     </header>
     <main>
       <form requried>
-        <h2>What are you looking for?</h2>
-          <input type="radio" name="dish" id="side" value="side">Side</input><br>
-          <input type="radio" name="dish" id="main-dish" value="main dish">Main Dish</input><br>
-          <input type="radio" name="dish" id="dessert" value="dessert">Dessert</input><br>
-          <input type="radio" name="dish" id="entire-meal" value="entire meal">Entire Meal</input><br>
-        <button id="let's-cook">LET'S COOK!</button>
+        <h2 class="what-are-you-looking-for">What are you looking for?</h2>
+          <input type="radio" name="dish" value="side">Side</input>
+          <input type="radio" name="dish" value="main dish">Main Dish</input>
+          <input type="radio" name="dish" value="dessert">Dessert</input>
+          <input type="radio" name="dish" value="entire meal">Entire Meal</input>
+        <button class="let's-cook-button">Let's cook!</button>
       </form>
       <section>
-        <h3 id="you-should-make">You should make: </h3>
-        <h1 id="name-of-dish"></h1>
-        <button id="clear">CLEAR</button>
+        <h3 class="you-should-make">You should make: </h3>
+        <h1 class="name-of-dish"></h1>
+        <button class="clear-button">clear</button>
       </section>
 
     </main>
