--- a/index.html
+++ b/index.html
@@ -13,16 +13,17 @@
     <main>
       <form requried>
         <h2 class="what-are-you-looking-for">What are you looking for?</h2>
-          <input type="radio" name="dish" value="side">Side</input>
-          <input type="radio" name="dish" value="main dish">Main Dish</input>
-          <input type="radio" name="dish" value="dessert">Dessert</input>
-          <input type="radio" name="dish" value="entire meal">Entire Meal</input>
-        <button class="let's-cook-button">Let's cook!</button>
+          <input type="radio" name="dish" value="side">Side</input><br>
+          <input type="radio" name="dish" value="main dish">Main Dish</input><br>
+          <input type="radio" name="dish" value="dessert">Dessert</input><br>
+          <input type="radio" name="dish" value="entire meal">Entire Meal</input><br>
+        <button class="lets-cook-button">Let's cook!</button>
       </form>
       <section>
-        <h3 class="you-should-make">You should make: </h3>
+        <img class"cookpot"src="assets/cookpot.svg" alt="cookpot">
+        <!-- <h3 class="you-should-make">You should make: </h3>
         <h1 class="name-of-dish"></h1>
-        <button class="clear-button">clear</button>
+        <button class="clear-button">clear</button> -->
       </section>
 
     </main>
