Add functionality to the entire meal input and output

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <input id="side" type="radio" name="dish" value="side">Side</input><br>
             <input id= "main-dish" type="radio" name="dish" value="main dish">Main Dish</input><br>
             <input id = "dessert" type="radio" name="dish" value="dessert">Dessert</input><br>
-            <input id = "entire meal" type="radio" name="dish" value="entire meal">Entire Meal</input><br>
+            <input id = "entire-meal" type="radio" name="dish" value="entire meal">Entire Meal</input><br>
           </section>
         <button class="lets-cook-button">Let's cook!</button>
       </form>
